--- a/index.html
+++ b/index.html
@@ -4,21 +4,34 @@
     <meta charset="utf-8" />
     <title>Interactive Normal Distribution</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <!-- React + ReactDOM (UMD) -->
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-    <!-- Babel (transpile JSX in the browser) -->
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <style>
+      @media print {
+        body * { visibility: hidden; }
+        .print-keep, .print-keep * { visibility: visible; }
+        .print-keep {
+          position: relative;
+          left: 0;
+          top: 0;
+          width: 100%;
+          margin: 0;
+          padding: 0;
+        }
+        svg { max-height: 6.5in; width: 100%; }
+        table { page-break-before: avoid; width: 100%; border-collapse: collapse; font-size: 10pt; }
+        th, td { border: 1px solid #ccc; padding: 4px; }
+        .no-print { display: none !important; }
+      }
+    </style>
   </head>
   <body class="bg-white">
     <div id="root"></div>
-
     <script type="text/babel">
       const { useState, useMemo } = React;
 
-      // ---------- math helpers ----------
       function gaussian(x, mean, sd) {
         const coef = 1 / (sd * Math.sqrt(2 * Math.PI));
         const exp = Math.exp(-0.5 * Math.pow((x - mean) / sd, 2));
@@ -50,10 +63,9 @@
       ];
 
       function BellCurveDashboard() {
-        // state
         const [axisSd, setAxisSd] = useState(15);
-        const [curveColor, setCurveColor] = useState("#bfe0ff99"); // light glassy blue
-        const [markerDefault, setMarkerDefault] = useState("#0ea5ff");
+        const [curveColor, setCurveColor] = useState("#bfe0ff99");
+        const [markerDefault] = useState("#0ea5ff");
         const [name, setName] = useState("");
         const [type, setType] = useState("standard");
         const [value, setValue] = useState("");
@@ -61,14 +73,9 @@
         const [items, setItems] = useState([]);
         const [showBands, setShowBands] = useState(false);
 
-        // layout
-        const width = 1000;
-        const leftPad = 60;
-        const rightPad = 40;
+        const width = 1000, leftPad = 60, rightPad = 40;
         const innerWidth = width - leftPad - rightPad;
         const xMin = 40, xMax = 160, mean = 100;
-
-        // card layout
         const rowGapY = 38, boxH = 36, boxGapX = 8;
         const topPad = 24, bottomPad = 70, baseHeight = 360, topRowGap = 16;
         const baseInnerHeight = baseHeight - topPad - bottomPad;
@@ -84,8 +91,11 @@
             const proposedX = Math.max(leftPad + 4, Math.min(x - boxW / 2, leftPad + innerWidth - boxW - 4));
             let row = 0;
             while (true) {
-              const rightEdge = rowsRight[row] ?? (leftPad - boxGapX);
-              if (proposedX >= rightEdge + boxGapX) { rowsRight[row] = proposedX + boxW; break; }
+              const rightEdge = rowsRight[row] ?? leftPad - boxGapX;
+              if (proposedX >= rightEdge + boxGapX) {
+                rowsRight[row] = proposedX + boxW;
+                break;
+              }
               row += 1;
             }
           });
@@ -94,10 +104,8 @@
 
         const baseRowsCapacity = Math.max(1, Math.floor((baseInnerHeight - topRowGap - boxH) / rowGapY) + 1);
         const extraRowsNeeded = Math.max(0, rowsNeeded - baseRowsCapacity);
-
         const height = baseHeight + extraRowsNeeded * rowGapY;
         const innerHeight = height - topPad - bottomPad;
-
         const xScale = (x) => leftPad + ((x - xMin) / (xMax - xMin)) * innerWidth;
 
         const curveGeom = useMemo(() => {
@@ -111,7 +119,6 @@
             if (y > maxY) maxY = y;
           }
           const scaleY = (y) => topPad + innerHeight - (y / maxY) * innerHeight;
-
           let d = "";
           for (let i = 0; i <= steps; i++) {
             const X = xScale(xs[i]);
@@ -119,37 +126,20 @@
             d += i === 0 ? `M ${X} ${Y}` : ` L ${X} ${Y}`;
           }
           d += ` L ${xScale(xMax)} ${topPad + innerHeight} L ${xScale(xMin)} ${topPad + innerHeight} Z`;
-          return { pathD: d, scaleY };
+          return { pathD: d };
         }, [axisSd, innerHeight, topPad]);
 
         const { pathD } = curveGeom;
-
-        function addItem(e) {
+        const addItem = (e) => {
           e.preventDefault();
           const num = Number(value);
           if (!isFinite(num)) return;
           const std100 = toStd100(num, type, axisSd);
-          const id = Math.random().toString(36).slice(2);
-          const newItem = {
-            id,
-            name: name.trim() || "(Unnamed)",
-            inputType: type,
-            inputValue: num,
-            std100,
-            color: color.trim() || undefined,
-          };
-          setItems((prev) => [...prev, newItem]);
+          setItems([...items, { id: Math.random().toString(36).slice(2), name: name.trim() || "(Unnamed)", inputType: type, inputValue: num, std100, color: color.trim() || undefined }]);
           setName(""); setValue(""); setColor("");
-        }
-
-        function removeItem(id) {
-          setItems((prev) => prev.filter((p) => p.id !== id));
-        }
-
-        function bandFor(score) {
-          const b = RANGE_BANDS.find((bb) => score >= bb.min && score <= bb.max);
-          return b ? b.label : "";
-        }
+        };
+        const removeItem = (id) => setItems(items.filter((i) => i.id !== id));
+        const bandFor = (s) => (RANGE_BANDS.find((b) => s >= b.min && s <= b.max) || {}).label || "";
 
         return (
           <div className="w-full min-h-screen bg-white text-slate-800 p-6">
@@ -161,16 +151,14 @@
                   <div className="flex items-center justify-between mb-3">
                     <span className="font-medium">Axis standard deviation</span>
                     <div className="flex items-center gap-2">
-                      <button className={`px-3 py-1 rounded-full border ${axisSd === 15 ? "bg-slate-900 text-white" : "bg-white"}`} onClick={() => setAxisSd(15)}>15</button>
-                      <button className={`px-3 py-1 rounded-full border ${axisSd === 10 ? "bg-slate-900 text-white" : "bg-white"}`} onClick={() => setAxisSd(10)}>10</button>
+                      <button className={`px-3 py-1 rounded-full border ${axisSd===15?"bg-slate-900 text-white":"bg-white"}`} onClick={()=>setAxisSd(15)}>15</button>
+                      <button className={`px-3 py-1 rounded-full border ${axisSd===10?"bg-slate-900 text-white":"bg-white"}`} onClick={()=>setAxisSd(10)}>10</button>
                     </div>
                   </div>
-
                   <div className="flex items-center justify-between mt-4">
                     <label className="text-sm">Curve Color</label>
-                    <input type="color" value={curveColor} onChange={(e) => setCurveColor(e.target.value)} className="w-10 h-8 rounded-md border cursor-pointer" />
+                    <input type="color" value={curveColor} onChange={(e)=>setCurveColor(e.target.value)} className="w-10 h-8 rounded-md border cursor-pointer"/>
                   </div>
-
                   <label className="mt-3 flex items-center gap-2 text-sm">
                     <input type="checkbox" checked={showBands} onChange={(e)=>setShowBands(e.target.checked)} />
                     Show background bands
@@ -181,11 +169,11 @@
                   <div className="grid md:grid-cols-4 gap-3 items-end">
                     <div>
                       <label className="text-sm">Subtest / Composite name</label>
-                      <input className="mt-1 w-full px-3 py-2 rounded-xl border focus:outline-none focus:ring" value={name} onChange={(e) => setName(e.target.value)} required />
+                      <input className="mt-1 w-full px-3 py-2 rounded-xl border" value={name} onChange={(e)=>setName(e.target.value)} required/>
                     </div>
                     <div>
                       <label className="text-sm">Score type</label>
-                      <select className="mt-1 w-full px-3 py-2 rounded-xl border" value={type} onChange={(e) => setType(e.target.value)}>
+                      <select className="mt-1 w-full px-3 py-2 rounded-xl border" value={type} onChange={(e)=>setType(e.target.value)}>
                         <option value="standard">Standard (mean 100)</option>
                         <option value="t">T (mean 50, SD 10)</option>
                         <option value="scaled">Scaled (mean 10, SD 3)</option>
@@ -194,12 +182,12 @@
                     </div>
                     <div>
                       <label className="text-sm">Value</label>
-                      <input type="number" step="any" className="mt-1 w-full px-3 py-2 rounded-xl border" value={value} onChange={(e) => setValue(e.target.value)} required />
+                      <input type="number" step="any" className="mt-1 w-full px-3 py-2 rounded-xl border" value={value} onChange={(e)=>setValue(e.target.value)} required/>
                     </div>
                     <div className="flex items-end gap-2">
                       <div className="flex-1">
                         <label className="text-sm">(Optional) Marker color</label>
-                        <input type="color" value={color || "#000000"} onChange={(e) => setColor(e.target.value)} className="mt-1 w-full h-[42px] rounded-xl border cursor-pointer" />
+                        <input type="color" value={color||\"#000000\"} onChange={(e)=>setColor(e.target.value)} className="mt-1 w-full h-[42px] rounded-xl border cursor-pointer"/>
                       </div>
                       <button type="submit" className="h-[42px] px-4 rounded-xl bg-slate-900 text-white hover:bg-slate-800">Add</button>
                     </div>
@@ -207,92 +195,57 @@
                 </form>
               </div>
 
-              <div className="rounded-2xl bg-white shadow-sm border overflow-hidden">
-                <svg width={width} height={height} className="w-full">
-                  {showBands && RANGE_BANDS.map((b) => {
-                    const x1 = Math.max(xMin, b.min === -Infinity ? xMin : b.min);
-                    const x2 = Math.min(xMax, b.max === Infinity ? xMax : b.max);
-                    const X = xScale(x1);
-                    const W = xScale(x2) - xScale(x1);
-                    return (
-                      <g key={b.label}>
-                        <rect x={X} y={topPad} width={W} height={innerHeight} fill={b.tint} opacity={0.35} />
-                        <text x={X + W / 2} y={topPad - 6} textAnchor="middle" className="fill-slate-600 text-[12px]">{b.label}</text>
-                      </g>
-                    );
-                  })}
-                  <path d={pathD} fill={curveColor} stroke="#0f172a22" strokeWidth={1} />
-                  {(() => {
-                    const sorted = [...items].sort((a, b) => a.std100 - b.std100);
-                    const rowsRight = [];
-                    const nodes = [];
-                    sorted.forEach((it) => {
-                      const label = `${it.name}`;
-                      const val = `${Math.round(it.std100)}`;
-                      const cat = bandFor(it.std100);
-                      const fill = it.color || markerDefault;
-                      const x = xScale(it.std100);
-                      const boxW = Math.max(84, label.length * 6 + 24);
-                      const proposedX = Math.max(leftPad + 4, Math.min(x - boxW / 2, leftPad + innerWidth - boxW - 4));
-                      let row = 0;
-                      while (true) {
-                        const rightEdge = rowsRight[row] ?? leftPad - 8;
-                        if (proposedX >= rightEdge + 8) { rowsRight[row] = proposedX + boxW; break; }
-                        row += 1;
-                      }
-                      const anchorX = proposedX;
-                      const anchorY = topPad + 16 + 38 * row;
-                      nodes.push(
-                        <g key={it.id}>
-                          <rect x={anchorX} y={anchorY} width={boxW} height={36} rx={10} ry={10} fill={fill} stroke="#0f172a55" />
-                          <text x={anchorX + boxW / 2} y={anchorY + 15} textAnchor="middle" className="fill-white text-[12px] font-medium">{label}</text>
-                          <text x={anchorX + boxW / 2} y={anchorY + 28} textAnchor="middle" className="fill-white text-[11px]">{val} • {cat}</text>
-                        </g>
-                      );
-                    });
-                    return nodes;
-                  })()}
-                </svg>
-              </div>
-
-              {items.length > 0 && (
-                <div className="mt-8 bg-white rounded-2xl shadow-sm border p-4" id="scoreTable">
-                  <div className="flex justify-between items-center mb-3">
-                    <h2 className="text-lg font-semibold">Entered Scores</h2>
-                    <button onClick={() => { if (typeof window !== 'undefined' && window.print) window.print(); }} className="px-4 py-2 bg-slate-900 text-white rounded-lg hover:bg-slate-800 no-print">Print / Save as PDF</button>
-                  </div>
-                  <table className="min-w-full border border-slate-200 text-sm">
-                    <thead className="bg-slate-100">
-                      <tr>
-                        <th className="border p-2 text-left">Subtest / Composite</th>
-                        <th className="border p-2 text-left">Score Type</th>
-                        <th className="border p-2 text-left">Input Value</th>
-                        <th className="border p-2 text-left">Converted (Std-100)</th>
-                        <th className="border p-2 text-left">Category</th>
-                        <th className="border p-2 text-left">Color</th>
-                        <th className="border p-2 text-left">Remove</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      {items.map((it) => (
-                        <tr key={it.id}>
-                          <td className="border p-2">{it.name}</td>
-                          <td className="border p-2">{it.inputType}</td>
-                          <td className="border p-2">{it.inputValue}</td>
-                          <td className="border p-2">{Math.round(it.std100)}</td>
-                          <td className="border p-2">{bandFor(it.std100)}</td>
-                          <td className="border p-2"><span className="inline-block w-5 h-5 rounded-md border" style={{ background: it.color || markerDefault }}></span></td>
-                          <td className="border p-2">
-                            <button onClick={() => setItems(prev => prev.filter(p => p.id !== it.id))} className="px-2 py-1 rounded-md border hover:bg-red-50 hover:text-red-700">
-                              Remove
-                            </button>
-                          </td>
-                        </tr>
-                      ))}
-                    </tbody>
-                  </table>
+              <div className="print-keep">
+                <div className="rounded-2xl bg-white shadow-sm border overflow-hidden">
+                  <svg width={width} height={height} className="w-full">
+                    {showBands && RANGE_BANDS.map((b)=>{
+                      const x1=Math.max(xMin,b.min===-Infinity?xMin:b.min);
+                      const x2=Math.min(xMax,b.max===Infinity?xMax:b.max);
+                      const X=xScale(x1); const W=xScale(x2)-xScale(x1);
+                      return <g key={b.label}><rect x={X} y={topPad} width={W} height={innerHeight} fill={b.tint} opacity={0.35}/><text x={X+W/2} y={topPad-6} textAnchor="middle" className="fill-slate-600 text-[12px]">{b.label}</text></g>;
+                    })}
+                    <path d={pathD} fill={curveColor} stroke="#0f172a22" strokeWidth={1}/>
+                    {(() => {
+                      const sorted=[...items].sort((a,b)=>a.std100-b.std100);
+                      const rowsRight=[],nodes=[];
+                      sorted.forEach(it=>{
+                        const label=it.name; const val=Math.round(it.std100);
+                        const cat=bandFor(it.std100); const fill=it.color||markerDefault;
+                        const x=xScale(it.std100); const boxW=Math.max(84,label.length*6+24);
+                        const proposedX=Math.max(leftPad+4,Math.min(x-boxW/2,leftPad+innerWidth-boxW-4));
+                        let row=0; while(true){const rE=rowsRight[row]??leftPad-8;if(proposedX>=rE+8){rowsRight[row]=proposedX+boxW;break;}row++; }
+                        const aX=proposedX,aY=topPad+16+38*row;
+                        nodes.push(<g key={it.id}><rect x={aX} y={aY} width={boxW} height={36} rx={10} ry={10} fill={fill}/><text x={aX+boxW/2} y={aY+15} textAnchor="middle" className="fill-white text-[12px] font-medium">{label}</text><text x={aX+boxW/2} y={aY+28} textAnchor="middle" className="fill-white text-[11px]">{val} • {cat}</text></g>);
+                      }); return nodes;
+                    })()}
+                  </svg>
                 </div>
-              )}
+
+                {items.length>0 && (
+                  <div className="mt-8 bg-white rounded-2xl shadow-sm border p-4" id="scoreTable">
+                    <div className="flex justify-between items-center mb-3">
+                      <h2 className="text-lg font-semibold">Entered Scores</h2>
+                      <button onClick={()=>window.print()} className="px-4 py-2 bg-slate-900 text-white rounded-lg hover:bg-slate-800 no-print">Print / Save as PDF</button>
+                    </div>
+                    <table className="min-w-full border border-slate-200 text-sm">
+                      <thead className="bg-slate-100">
+                        <tr>
+                          <th className="border p-2 text-left">Subtest / Composite</th>
+                          <th className="border p-2 text-left">Score Type</th>
+                          <th className="border p-2 text-left">Input Value</th>
+                          <th className="border p-2 text-left">Converted (Std-100)</th>
+                          <th className="border p-2 text-left">Category</th>
+                          <th className="border p-2 text-left">Color</th>
+                          <th className="border p-2 text-left">Remove</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        {items.map((it)=>(<tr key={it.id}><td className="border p-2">{it.name}</td><td className="border p-2">{it.inputType}</td><td className="border p-2">{it.inputValue}</td><td className="border p-2">{Math.round(it.std100)}</td><td className="border p-2">{bandFor(it.std100)}</td><td className="border p-2"><span className="inline-block w-5 h-5 rounded-md border" style={{background:it.color||markerDefault}}></span></td><td className="border p-2"><button onClick={()=>removeItem(it.id)} className="px-2 py-1 rounded-md border hover:bg-red-50 hover:text-red-700">Remove</button></td></tr>))}
+                      </tbody>
+                    </table>
+                  </div>
+                )}
+              </div>
             </div>
           </div>
         );
