--- a/index.html
+++ b/index.html
@@ -4,23 +4,35 @@
     <meta charset="utf-8" />
     <title>Interactive Normal Distribution</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- React + ReactDOM -->
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+    <!-- Babel -->
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <!-- Geometric Humanist font: Poppins -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
     <style>
+      :root { --print-curve-max-height: 7.8in; } /* allow more headroom for cards */
+
+      body { font-family: "Poppins", system-ui, -apple-system, Segoe UI, Roboto, sans-serif; }
+
+      @page {
+        margin: 0.5in;
+      }
+
       @media print {
         body * { visibility: hidden; }
         .print-keep, .print-keep * { visibility: visible; }
         .print-keep {
-          position: relative;
-          left: 0;
-          top: 0;
-          width: 100%;
-          margin: 0;
-          padding: 0;
+          position: relative; left: 0; top: 0; width: 100%; margin: 0; padding: 0;
         }
-        svg { max-height: 6.5in; width: 100%; }
+        /* keep title hidden to prioritize curve+table on the page */
+        .print-hide { display: none !important; }
+
+        /* Fit curve and table on one page */
+        svg { width: 100%; max-height: var(--print-curve-max-height); }
         table { page-break-before: avoid; width: 100%; border-collapse: collapse; font-size: 10pt; }
         th, td { border: 1px solid #ccc; padding: 4px; }
         .no-print { display: none !important; }
@@ -78,7 +90,8 @@
         const innerWidth = width - leftPad - rightPad;
         const xMin = 40, xMax = 160, mean = 100;
         const rowGapY = 38, boxH = 36, boxGapX = 8;
-        const topPad = 24, bottomPad = 70, baseHeight = 360, topRowGap = 16;
+        const topPad = 24, bottomPad = 70, baseHeight = 400, topRowGap = 16;
+
         const baseInnerHeight = baseHeight - topPad - bottomPad;
 
         const rowsNeeded = useMemo(() => {
@@ -104,6 +117,7 @@
         const extraRowsNeeded = Math.max(0, rowsNeeded - baseRowsCapacity);
         const height = baseHeight + extraRowsNeeded * rowGapY;
         const innerHeight = height - topPad - bottomPad;
+
         const xScale = (x) => leftPad + ((x - xMin) / (xMax - xMin)) * innerWidth;
 
         const curveGeom = useMemo(() => {
@@ -134,18 +148,26 @@
           const num = Number(value);
           if (!isFinite(num)) return;
           const std100 = toStd100(num, type, axisSd);
-          setItems([...items, { id: Math.random().toString(36).slice(2), name: name.trim() || "(Unnamed)", inputType: type, inputValue: num, std100, color: color.trim() || undefined }]);
+          setItems(prev => [...prev, {
+            id: Math.random().toString(36).slice(2),
+            name: name.trim() || "(Unnamed)",
+            inputType: type,
+            inputValue: num,
+            std100,
+            color: color.trim() || undefined,
+          }]);
           setName(""); setValue(""); setColor("");
         };
-        const removeItem = (id) => setItems(items.filter((i) => i.id !== id));
-        const bandFor = (s) => (RANGE_BANDS.find((b) => s >= b.min && s <= b.max) || {}).label || "";
+
+        const removeItem = (id) => setItems(prev => prev.filter(i => i.id !== id));
+        const bandFor = (s) => (RANGE_BANDS.find(b => s >= b.min && s <= b.max) || {}).label || "";
 
         return (
           <div className="w-full min-h-screen bg-white text-slate-800 p-6">
             <div className="max-w-[1200px] mx-auto">
-              <h1 className="text-2xl md:text-3xl font-semibold mb-2">Interactive Normal Distribution</h1>
+              <h1 className="text-2xl md:text-3xl font-semibold mb-2 print-hide">Interactive Normal Distribution</h1>
 
-              <div className="grid lg:grid-cols-3 gap-4 mb-6">
+              <div className="grid lg:grid-cols-3 gap-4 mb-6 print-hide">
                 <div className="p-4 rounded-2xl bg-white shadow-sm border">
                   <div className="flex items-center justify-between mb-3">
                     <span className="font-medium">Axis standard deviation</span>
@@ -191,9 +213,22 @@
                       <button type="submit" className="h-[42px] px-4 rounded-xl bg-slate-900 text-white hover:bg-slate-800">Add</button>
                     </div>
                   </div>
+
+                  {items.length > 0 && (
+                    <div className="mt-3 flex flex-wrap gap-2">
+                      {items.map(it => (
+                        <span key={it.id} className="px-3 py-1 rounded-full bg-slate-100 border text-sm flex items-center gap-2">
+                          <span className="inline-block w-3 h-3 rounded-full" style={{background: it.color || markerDefault}} />
+                          {it.name} — {it.inputValue} {it.inputType}
+                          <button onClick={() => removeItem(it.id)} className="ml-1 text-slate-500 hover:text-red-600" title="Remove">×</button>
+                        </span>
+                      ))}
+                    </div>
+                  )}
                 </form>
               </div>
 
+              <!-- PRINTABLE AREA -->
               <div className="print-keep">
                 <div className="rounded-2xl bg-white shadow-sm border overflow-hidden">
                   <svg width={width} height={height} className="w-full">
@@ -239,19 +274,15 @@
                         </tr>
                       </thead>
                       <tbody>
-                        {items.map((it)=>(
+                        {items.map(it=>(
                           <tr key={it.id}>
                             <td className="border p-2">{it.name}</td>
                             <td className="border p-2">{it.inputType}</td>
                             <td className="border p-2">{it.inputValue}</td>
                             <td className="border p-2">{Math.round(it.std100)}</td>
                             <td className="border p-2">{bandFor(it.std100)}</td>
-                            <td className="border p-2">
-                              <span className="inline-block w-5 h-5 rounded-md border" style={{background:it.color||markerDefault}}></span>
-                            </td>
-                            <td className="border p-2">
-                              <button onClick={()=>removeItem(it.id)} className="px-2 py-1 rounded-md border hover:bg-red-50 hover:text-red-700">Remove</button>
-                            </td>
+                            <td className="border p-2"><span className="inline-block w-5 h-5 rounded-md border" style={{background:it.color||markerDefault}}></span></td>
+                            <td className="border p-2"><button onClick={()=>removeItem(it.id)} className="px-2 py-1 rounded-md border hover:bg-red-50 hover:text-red-700">Remove</button></td>
                           </tr>
                         ))}
                       </tbody>
@@ -259,6 +290,8 @@
                   </div>
                 )}
               </div>
+              <!-- /PRINTABLE AREA -->
+
             </div>
           </div>
         );
