--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@
         es: [
           "Muy Bajo",
           "Bajo",
-          "Low Average",
+          "Promedio Bajo",
           "Promedio",
-          "High Average",
+          "Promedio Alto",
           "Superior",
           "Muy Superior",
         ],
@@ -404,3 +404,4 @@
     </script>
   </body>
 </html>
+
