--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
     <style>
-      /* ✅ Default font: Georgia */
+      /* Default font: Georgia */
       body { font-family: Georgia, "Times New Roman", Times, serif; }
 
       /* Landscape printing with default scaling */
@@ -77,22 +77,19 @@
         return value;
       }
 
-      /* ---------- qualitative ranges ---------- */
-      const BASE_RANGES = [
-        { min: -Infinity, max: 69,  tint: "#fecaca" },
-        { min: 70,       max: 79,  tint: "#fed7aa" },
-        { min: 80,       max: 89,  tint: "#fde68a" },
-        { min: 90,       max: 109, tint: "#bbf7d0" },
-        { min: 110,      max: 119, tint: "#bae6fd" },
-        { min: 120,      max: 129, tint: "#c7d2fe" },
-        { min: 130,      max: Infinity, tint: "#ddd6fe" },
-      ];
-
+      /* ---------- labels ---------- */
       const BAND_LABELS = {
         en: ["Very Low","Low","Below Avg","Average","High Avg","Very High","Superior"],
         es: ["Muy Bajo","Bajo","Promedio Bajo","Promedio","Promedio Alto","Superior","Muy Superior"],
         yue: ["非常低","低","低平均水平","平均","高平均水平","高","非常高"],
       };
+
+      /* ---------- band tints ---------- */
+      const BAND_TINTS = ["#fecaca","#fed7aa","#fde68a","#bbf7d0","#bae6fd","#c7d2fe","#ddd6fe"];
+
+      /* z-cutpoints that approximate your original 15-SD banding */
+      // [-∞, -2], (-2, -1.33], (-1.33, -0.67], (-0.67, 0.67], (0.67, 1.33], (1.33, 2], (2, ∞)
+      const Z_CUTS = [-2, -1.3333333333, -0.6666666667, 0.6666666667, 1.3333333333, 2];
 
       /* ---------- cluster palette + marker presets ---------- */
       const CLUSTER_PALETTE = [
@@ -133,19 +130,37 @@
         const [clusterColors, setClusterColors] = useState({});
         const [clusterOrder, setClusterOrder] = useState([]);
 
+        const mean = 100;
+
+        // --- build SD-dependent bands using z cutpoints ---
         const RANGE_BANDS = useMemo(() => {
           const labels = BAND_LABELS[lang] || BAND_LABELS.en;
-          return BASE_RANGES.map((r, i) => ({ ...r, label: labels[i] }));
-        }, [lang]);
 
+          // Convert z cuts to score cuts for current axis SD
+          const cuts = Z_CUTS.map(z => mean + z * axisSd);
+
+          // Band intervals based on those cuts
+          const bands = [
+            { min: -Infinity, max: cuts[0], label: labels[0], tint: BAND_TINTS[0] },
+            { min: cuts[0], max: cuts[1], label: labels[1], tint: BAND_TINTS[1] },
+            { min: cuts[1], max: cuts[2], label: labels[2], tint: BAND_TINTS[2] },
+            { min: cuts[2], max: cuts[3], label: labels[3], tint: BAND_TINTS[3] },
+            { min: cuts[3], max: cuts[4], label: labels[4], tint: BAND_TINTS[4] },
+            { min: cuts[4], max: cuts[5], label: labels[5], tint: BAND_TINTS[5] },
+            { min: cuts[5], max: Infinity, label: labels[6], tint: BAND_TINTS[6] },
+          ];
+
+          return bands;
+        }, [lang, axisSd]);
+
+        // --- dimensions: shift curve right by increasing leftPad ---
         const width = 1000;
-        const leftPad = 60;
+        const leftPad = 110;   // was 60; increased to avoid left label clipping + center curve better
         const rightPad = 40;
         const innerWidth = width - leftPad - rightPad;
 
         const xMin = 40;
         const xMax = 160;
-        const mean = 100;
 
         const rowGapY = 38;
         const boxH = 36;
@@ -200,7 +215,6 @@
 
           setName("");
           setValue("");
-          // cluster + markerPreset persist until changed
         }
 
         function removeItem(id) {
@@ -277,7 +291,7 @@
           });
 
           return { totalRows: yOffsetRows, clusters: clusterLayouts };
-        }, [items, groupByCluster, clusterOrder, axisSd]);
+        }, [items, groupByCluster, clusterOrder, axisSd, leftPad, innerWidth]);
 
         const height = useMemo(() => {
           if (!items.length) return baseHeight;
@@ -318,14 +332,14 @@
           }
           d += ` L ${xScale(xMax)} ${topPad + innerHeight} L ${xScale(xMin)} ${topPad + innerHeight} Z`;
           return d;
-        }, [axisSd, innerHeight]);
+        }, [axisSd, innerHeight, leftPad, innerWidth]);
 
         function renderClusterLabels() {
           if (!groupByCluster) return null;
           return layout.clusters.map((c) => (
             <text
               key={c.name}
-              x={leftPad - 10}
+              x={leftPad - 18}   /* slightly inside the left padding */
               y={topPad + topRowGap + c.yOffsetPx + 12}
               textAnchor="end"
               className="fill-slate-500 text-[11px]"
@@ -431,11 +445,7 @@
                         onChange={(e)=>setCluster(e.target.value)}
                         placeholder="Ungrouped if blank"
                       />
-                      {clusterOrder.length > 0 && (
-                        <div className="text-xs text-slate-500 mt-1">
-                          Existing: {clusterOrder.slice(0,6).join(", ")}{clusterOrder.length>6 ? "…" : ""}
-                        </div>
-                      )}
+                      <!-- Removed the “Existing:” list per your request -->
                     </div>
 
                     <div>
